TODOOY-16: Fix spacing at my tasks pages (#339)
* 🎸 Thien add sync guest list with gmail account  and fix routes /lists(#293)

* 🎸 Thien add sync guest list with gmail account

* refactor todolist sync name

* fix routes.config for list detail page

* 🐛 Create My Tasks function (#329)

* init

* Update my tasks

* Update router

* Update query my tasks

* Update LocalizationProvider

* Update socket

* Update socket to My Tasks

* 🐛 Temporary fix this


* TODOOY-16: Update spacing at my tasks page

* Update spacing and text center

* Recover code

* Delete modal create update task

--- a/src/components/common/task-item/style.module.scss
+++ b/src/components/common/task-item/style.module.scss
@@ -1,10 +1,10 @@
 .task :global {
   @apply relative border border-t-0 bg-white px-4;
-  @apply flex justify-between;
+  @apply flex items-center justify-between;
   @apply min-h-[48px] w-full;
   .h6 {
-    @apply mx-3 flex w-full cursor-pointer items-start py-3 leading-5;
-    word-break: break-word;
+    @apply mx-3 w-full cursor-pointer py-3 leading-5;
+    @apply truncate;
   }
   .checked {
     @apply line-through opacity-50;
